fixed background image not covering the container background

--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,8 @@
   grid-template-columns: 1fr 4fr 1fr;
   grid-template-rows: 1fr 3fr 1fr;
   height: 500px;
+  background-size: cover;
+  background-repeat: no-repeat;
   background-image: url('./images/dj-pic.jpg');
 }
 
